# advent-of-code-2023-python

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  template.py
tests/: solution_tester.py  template.py  test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py  test_day_06.py
